grub2 (2.02~beta2-37) UNRELEASED; urgency=medium

  [ Debconf translations ]
  * [ja] Japanese (Takuma Yamada; closes: #815203, #817084).

 -- Colin Watson <cjwatson@debian.org>  Sat, 20 Feb 2016 02:10:39 +0000

grub2 (2.02~beta2-36) unstable; urgency=medium

  [ Colin Watson ]
  * Use HTTPS for Vcs-Git URL.
  * Add zfs, zfscrypt, and zfsinfo to signed EFI images (LP: #1542358).

  [ Martin Pitt ]
  * debian/postinst.in, debian/kernel/zz-update-grub: Call
    systemd-detect-virt (which works under any init system, despite the
    name) instead of the Ubuntu specific running-in-container wrapper.
    (LP: #1539016)

 -- Colin Watson <cjwatson@debian.org>  Fri, 05 Feb 2016 15:41:05 +0000

grub2 (2.02~beta2-35) unstable; urgency=medium

  * Apply the arm64 -mpc-relative-literal-loads workaround in configure
    rather than in debian/rules, to cope with toolchains that don't have the
    relevant patch applied.

 -- Colin Watson <cjwatson@debian.org>  Fri, 22 Jan 2016 11:02:10 +0000

grub2 (2.02~beta2-34) unstable; urgency=medium

  [ Colin Watson ]
  * Remove duplicate Replaces on grub-ieee1275 (<< 2.00-4) from
    grub2-common.
  * Refer to /usr/share/common-licenses/GPL-3 rather than
    /usr/share/common-licenses/GPL.
  * Cherry-pick upstream patches to add more ACPI opcodes to acpihalt
    (closes: #766853, LP: #1530648).
  * Drop build-dependency on libusb-dev, since it was currently unused in
    any case; also explicitly configure with --disable-grub-emu-usb to avoid
    possible future ambiguity (closes: #810421).
  * Use dpkg-maintscript-helper to convert directories to symlinks in
    various upgrade cases, in place of hand-coded equivalents.
  * Change versioned Conflicts from grub-common and grub2-common into Breaks
    or Breaks+Replaces as appropriate.
  * Remove pragmas related to -Wunreachable-code (closes: #812047).
  * Temporarily work around arm64 build failure with gcc-5 >= 5.3.1-4 using
    -mpc-relative-literal-loads.